--- a/index.html
+++ b/index.html
@@ -15,97 +15,101 @@
   <title>Tim Cakir</title>
 </head>
 <body>
+  <nav class="nav-extended">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Tim Cakir</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
+    </div>
+    <div class="nav-content">
+      <ul class="tabs tabs-transparent">
+        <li class="tab"><a href="#test1">Home</a></li>
+        <li class="tab"><a class="active" href="#test2">Media</a></li>
+        <li class="tab"><a href="#test3">Press</a></li>
+        <li class="tab"><a href="#test4">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
   <div class="hero">
-    <nav class="nav-extended">
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Tim Cakir</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-      </div>
-      <div class="nav-content">
-        <ul class="tabs tabs-transparent">
-          <li class="tab"><a href="#test1">Test 1</a></li>
-          <li class="tab"><a class="active" href="#test2">Test 2</a></li>
-          <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
-          <li class="tab"><a href="#test4">Test 4</a></li>
-        </ul>
-      </div>
-    </nav>
     <div class="row">
-      <div class="carousel carousel-slider center" data-indicators="true">
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QrZWIeZ1KW4?rel=0" frameborder="0" allowfullscreen></iframe>        </div>
+        <!-- Hero Sliders 1 Example
+        <div class="carousel carousel-slider center" data-indicators="true">
         <div class="carousel-fixed-item center">
-          <a class="btn waves-effect white grey-text darken-text-2">button</a>
-        </div>
-        <div class="carousel-item red white-text" href="#one!">
-          <h2>First Panel</h2>
-          <p class="white-text">This is your first panel</p>
+        <a class="btn waves-effect white grey-text darken-text-2">button</a>
+      </div>
+
+      <div class="carousel-item red white-text" href="#one!">
+      <h2>First Panel</h2>
+      <p class="white-text">This is your first panel</p>
+    </div>
+  -->
+</div>
+</div>
+<main>
+  <div class="row">
+    <div class="container">
+      <h1>Services</h1>
+      <div class="col s4">
+        <i class="material-icons">settings</i>
+        <p class="promo-caption">Tools Integration</p>
+        <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
+      </div>
+      <div class="col s4">
+        <i class="material-icons">flash_on</i>
+        <p class="promo-caption">Inbound Strategy</p>
+        <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>        </div>
+        <div class="col s4">
+          <i class="material-icons">group</i>
+          <p class="promo-caption">Task Management</p>
+          <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
         </div>
       </div>
     </div>
-  </div>
-  <main>
-    <div class="row">
+  </main>
+  <footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Footer Content</h5>
+          <p class="white-text">You can use rows and columns here to organize your footer content.</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="grey-text text-lighten-4">Social</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
       <div class="container">
-        <h1>Main section</h1>
-        <div class="col s4">
-          <i class="material-icons">settings</i>
-          <p class="promo-caption">Tools Integration</p>
-          <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
-        </div>
-        <div class="col s4">
-          <i class="material-icons">flash_on</i>
-          <p class="promo-caption">Inbound Strategy</p>
-          <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>        </div>
-          <div class="col s4">
-            <i class="material-icons">group</i>
-            <p class="promo-caption">Task Management</p>
-            <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
-          </div>
-        </div>
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
-    </main>
-    <footer class="page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-          © 2014 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-        </div>
-      </div>
-    </footer>
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
-    <script type="text/javascript">
-    $(document).ready(function(){
-      $('.carousel').carousel();
-      $('.carousel.carousel-slider').carousel({fullWidth: true});
-    });
-    </script>
-  </body>
-  </html>
+    </div>
+  </footer>
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+    $('.carousel').carousel();
+    $('.carousel.carousel-slider').carousel({fullWidth: true});
+  });
+  </script>
+</body>
+</html>
