Styling with Buttons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -8,12 +9,13 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
-  <link rel="stylesheet" type="text/css "href="resources/css/Style.css">
+  <link rel="stylesheet" type="text/css " href="resources/css/Style.css">
   <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8">
   <title>Tim Cakir</title>
 </head>
+
 <body>
   <nav class="nav-extended">
     <div class="nav-wrapper">
@@ -42,37 +44,42 @@
   <div class="hero">
     <div class="row">
       <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/QrZWIeZ1KW4?rel=0" frameborder="0" allowfullscreen></iframe>        </div>
-        <!-- Hero Sliders 1 Example
-        <div class="carousel carousel-slider center" data-indicators="true">
-        <div class="carousel-fixed-item center">
-        <a class="btn waves-effect white grey-text darken-text-2">button</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QrZWIeZ1KW4?rel=0" frameborder="0" allowfullscreen></iframe>
       </div>
-
-      <div class="carousel-item red white-text" href="#one!">
-      <h2>First Panel</h2>
-      <p class="white-text">This is your first panel</p>
+      <!-- Hero Sliders 1 Example
+      <div class="carousel carousel-slider center" data-indicators="true">
+      <div class="carousel-fixed-item center">
+      <a class="btn waves-effect white grey-text darken-text-2">button</a>
     </div>
-  -->
-</div>
-</div>
-<main>
-  <div class="row">
-    <div class="container">
-      <h1>Services</h1>
-      <div class="col s4">
-        <i class="material-icons">settings</i>
-        <p class="promo-caption">Tools Integration</p>
-        <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
-      </div>
-      <div class="col s4">
-        <i class="material-icons">flash_on</i>
-        <p class="promo-caption">Inbound Strategy</p>
-        <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>        </div>
+
+    <div class="carousel-item red white-text" href="#one!">
+    <h2>First Panel</h2>
+    <p class="white-text">This is your first panel</p>
+  </div>
+-->
+    </div>
+  </div>
+  <main>
+    <div class="row">
+      <div class="container">
+        <h1>Services</h1>
+          <div class="col s4">
+            <i class="material-icons">settings</i>
+            <p class="promo-caption">Tools Integration</p>
+            <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
+            <a class="btn btn-floating btn-large orange darken-3 pulse">Learn More</a>
+          </div>
+        <div class="col s4">
+          <i class="material-icons">flash_on</i>
+          <p class="promo-caption">Inbound Strategy</p>
+          <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
+          <a class="btn btn-floating btn-large orange darken-3 pulse">Learn More</a>
+        </div>
         <div class="col s4">
           <i class="material-icons">group</i>
           <p class="promo-caption">Task Management</p>
           <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
+          <a class="btn btn-floating btn-large orange darken-3 pulse">Learn More</a>
         </div>
       </div>
     </div>
@@ -81,8 +88,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="white-text">You can use rows and columns here to organize your footer content.</p>
+          <h5 class="footer-text">Footer Content</h5>
+          <p class="footer-text">You can use rows and columns here to organize your footer content.</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="grey-text text-lighten-4">Social</h5>
@@ -106,10 +113,13 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
   <script type="text/javascript">
-  $(document).ready(function(){
-    $('.carousel').carousel();
-    $('.carousel.carousel-slider').carousel({fullWidth: true});
-  });
+    $(document).ready(function() {
+      $('.carousel').carousel();
+      $('.carousel.carousel-slider').carousel({
+        fullWidth: true
+      });
+    });
   </script>
 </body>
+
 </html>
