buttons working fine

--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
           <div class="col s4">
             <i class="material-icons">settings</i>
             <p class="promo-caption">Tools Integration</p>
-            <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
-            <a class="btn btn-floating btn-large orange darken-3 pulse">Learn More</a>
+            <p class="light center flow-text">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
+            <a class="btn btn-floating btn-medium orange darken-3 pulse"><i class="material-icons">more_horiz</i></a>
           </div>
         <div class="col s4">
           <i class="material-icons">flash_on</i>
           <p class="promo-caption">Inbound Strategy</p>
-          <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
-          <a class="btn btn-floating btn-large orange darken-3 pulse">Learn More</a>
+          <p class="light center flow-text">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
+          <a class="btn btn-floating btn-medium orange darken-3 pulse"><i class="material-icons">more_horiz</i></a>
         </div>
         <div class="col s4">
           <i class="material-icons">group</i>
           <p class="promo-caption">Task Management</p>
-          <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
-          <a class="btn btn-floating btn-large orange darken-3 pulse">Learn More</a>
+          <p class="light center flow-text">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
+          <a class="btn btn-floating btn-medium orange darken-3 pulse"><i class="material-icons">more_horiz</i></a>
         </div>
       </div>
     </div>
