--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
   <section class="tools">
     <div class="row">
       <div class="container">
-      <div class="col s1">Expert in</div>
-      <div class="col s1"></div>
-      <div class="col s1"></div>
-      <div class="col s1">4</div>
-      <div class="col s1">5</div>
-      <div class="col s1">6</div>
-      <div class="col s1">7</div>
-      <div class="col s1">8</div>
-      <div class="col s1">9</div>
-      <div class="col s1">10</div>
-      <div class="col s1">11</div>
-      <div class="col s1">12</div>
+        <div class="col s1">Logo 0</div>
+        <div class="col s1"></div>
+        <div class="col s1">Logo 1</div>
+        <div class="col s1"></div>
+        <div class="col s1">logo 2</div>
+        <div class="col s1"></div>
+        <div class="col s1">logo 3</div>
+        <div class="col s1"></div>
+        <div class="col s1">logo 4</div>
+        <div class="col s1"></div>
+        <div class="col s1">logo 5</div>
+        <div class="col s1"></div>
+      </div>
     </div>
-    </div>
-      </section>
+  </section>
   <!--  MAIN SECTION -->
   <main>
     <div class="row">
@@ -269,7 +269,7 @@
     });
     //  Pick a Date
     $('.datepicker').pickadate({
-      selectMonths: true, // Creates a dropdown to control month
+      selectMonths: false, // Creates a dropdown to control month
       selectYears: 15, // Creates a dropdown of 15 years to control year,
       today: 'Today',
       clear: 'Clear',
