--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   <!-- Custom Stylesheets -->
-  <link rel="stylesheet" type="text/css" href="resources/css/Style.css">
+  <link rel="stylesheet" type="text/css" href="timcakir/resources/css/style.css">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8">
