--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   <!-- Custom Stylesheets -->
-  <link rel="stylesheet" type="text/css" href="https://github.com/TimCakir/timcakir/blob/master/resources/css/style.css">
+  <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
         <li class="social icons"><a class="facebook icons" href="#fakelink"><img src="" alt=""></a></li>
         <li class="social icons"><a class="twitter icons" href="#fakelink"><img src="" alt=""></a></li>
       </ul>
-      
+
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
