Styling the video row padding and commenting out for future use

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <a href="#" class="brand-logo">Tim Cakir</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
+        <!-- <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li> -->
         <li><a href="collapsible.html">+34 690 909 531</a></li>
         <li class="social icons"><a class="linkedin icons" href="#fakelink"><img src="" alt=""></a></li>
         <li class="social icons"><a class="facebook icons" href="#fakelink"><img src="" alt=""></a></li>
@@ -33,15 +33,15 @@
       </ul>
 
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
+        <!-- <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li> -->
       </ul>
       <div class="nav-content">
         <ul class="tabs tabs-transparent">
           <li class="tab"><a class="active" href="#test1">Home</a></li>
-          <li class="tab"><a href="#test2">Media</a></li>
-          <li class="tab"><a href="#test3">Press</a></li>
+          <!-- <li class="tab"><a href="#test2">Media</a></li>
+          <li class="tab"><a href="#test3">Press</a></li> -->
           <li class="tab"><a data-target="modal1" class="modal-trigger">Contact</a></li>
         </ul>
       </div>
@@ -68,7 +68,7 @@
     </div>
   </div>
   <!-- Tools I use Section -->
-  <section class="tools">
+  <!-- <section class="tools">
     <div class="row">
       <div class="container">
         <div class="col s1">Logo 0</div>
@@ -85,7 +85,7 @@
         <div class="col s1"></div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--  MAIN SECTION -->
   <main>
     <div class="row">
@@ -117,8 +117,7 @@
           <h2 class="speak">Interested in having me speak?</h2>
           <p>Fill out a booking request</p>
           <div class="col s7 push-s5"><span class="flow-text">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/QrZWIeZ1KW4?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
-            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/QrZWIeZ1KW4?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             <p>"How to change your b2b/b2c mindset to h2h"<br>Inbound BCN at Itnig on July 13th 2017</p>
           </span>
           </div>
@@ -224,7 +223,7 @@
           <h5 class="footer-text">Footer Content</h5>
           <p class="footer-text">You can use rows and columns here to organize your footer content.</p>
         </div>
-        <div class="col l4 offset-l2 s12">
+        <!-- <div class="col l4 offset-l2 s12">
           <h5 class="grey-text text-lighten-4">Social</h5>
           <ul>
             <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
@@ -232,13 +231,13 @@
             <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        © 2017 Timy
+        <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
       </div>
     </div>
   </footer>
