--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <div class="section no-pad-bot" id="index-banner">
         <div class="container">
           <br><br>
-          <h1 class="header center">Starter Template</h1>
+          <h1 class="header center">Tracking &amp Hacking</h1>
           <div class="row center">
-            <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+            <h5 class="header col s12 light">All things Marketing &amp Growth...</h5>
           </div>
           <div class="row center">
             <a id="download-button" data-target="modal1" class="btn-large waves-effect waves-light orange darken-3 pulse modal-trigger">Let's Talk</a>
